# napari-annotation-project

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_annotation_project/: __init__.py  folder_list_widget.py  napari.yaml  parameters.py  project.py  project_widget.py
src/napari_annotation_project/_tests/: test_dock_widget.py  test_function.py  test_project.py  test_project_widget.py  test_writer.py
