[metadata]
name = napari-annotation-project

author = Guillaume Witz
author_email = guillaume.witz@unibe.ch
url = https://github.com/guiwitz/napari-annotation-project
license = BSD-3-Clause
description = A napari plugin to keep images and annotations as a re-loadable project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/guiwitz/napari-annotation-project/issues
    Documentation = https://github.com/guiwitz/napari-annotation-project#README.md
    Source Code = https://github.com/guiwitz/napari-annotation-project
    User Support = https://github.com/guiwitz/napari-annotation-project/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-annotation-project = napari_annotation_project
