[metadata]
name = napari-annotation-project

author = Guillaume Witz
author_email = guillaume.witz@unibe.ch
url = https://github.com/guiwitz/napari-annotation-project
license = BSD-3-Clause
description = A napari plugin to keep images and annotations as a re-loadable project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/guiwitz/napari-annotation-project/issues
    Documentation = https://github.com/guiwitz/napari-annotation-project#README.md
    Source Code = https://github.com/guiwitz/napari-annotation-project
    User Support = https://github.com/guiwitz/napari-annotation-project/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
    PyYAML
    scikit-image

[options.packages.find]
where = src

[options.package_data]
napari-morphodynamics = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-annotation-project = napari_annotation_project:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

